feat(nhl): add props history and add endpoints
